--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src3_5.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="src3_6.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chap3.h">
