--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="src3_5.cpp" />
     <ClCompile Include="src3_6.cpp" />
     <ClCompile Include="src3_7.cpp" />
+    <ClCompile Include="src3_8.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chap3.h" />
