--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
@@ -13,44 +13,47 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\chap03">
+      <UniqueIdentifier>{9ac947ad-92be-4f42-8664-60cd98a807a2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C++ProgramDesign3rd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src3_4.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_1.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_1.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_2.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_2.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_3.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_3.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_4.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_5.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_5.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_6.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_6.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_7.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_7.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_8.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_8.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_9.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_9.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
-    <ClCompile Include="src3_10.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="src\chap03\src3_10.cpp">
+      <Filter>Resource Files\chap03</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="chap3.h">
+    <ClInclude Include="include\chap3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
