--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\chap03\src3_10.cpp">
       <Filter>Resource Files\chap03</Filter>
     </ClCompile>
+    <ClCompile Include="src03_11.cpp">
+      <Filter>Resource Files\chap03</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\chap3.h">
