--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="C++ProgramDesign3rd.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
+    <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src3_1.cpp" />
     <ClCompile Include="src\chap03\src3_10.cpp" />
     <ClCompile Include="src\chap03\src3_2.cpp" />
