--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="C++ProgramDesign3rd.cpp" />
+    <ClCompile Include="chap03.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
@@ -159,6 +160,7 @@
     <ClCompile Include="src\chap03\src3_9.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="C++ProgramDesign3rd.h" />
     <ClInclude Include="include\chap3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
