--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="src\ch04\src0405.cpp" />
     <ClCompile Include="src\ch05\src0501.cpp" />
     <ClCompile Include="src\ch05\src0502.cpp" />
+    <ClCompile Include="src\ch05\src0503.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
