--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="src\ch05\src0501.cpp" />
     <ClCompile Include="src\ch05\src0502.cpp" />
     <ClCompile Include="src\ch05\src0503.cpp" />
+    <ClCompile Include="src\ch05\src0504.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
