--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="src\ch05\src0504.cpp" />
     <ClCompile Include="src\ch05\src0505.cpp" />
     <ClCompile Include="src\ch05\src0506.cpp" />
+    <ClCompile Include="src\ch05\src0507.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
