--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="src\ch04\src0403.cpp" />
     <ClCompile Include="src\ch04\src0404.cpp" />
     <ClCompile Include="src\ch04\src0405.cpp" />
+    <ClCompile Include="src\ch05\Real.cpp" />
     <ClCompile Include="src\ch05\src0501.cpp" />
     <ClCompile Include="src\ch05\src0502.cpp" />
     <ClCompile Include="src\ch05\src0503.cpp" />
@@ -171,6 +172,7 @@
     <ClCompile Include="src\ch05\src0505.cpp" />
     <ClCompile Include="src\ch05\src0506.cpp" />
     <ClCompile Include="src\ch05\src0507.cpp" />
+    <ClCompile Include="src\ch05\src0508.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
@@ -197,6 +199,7 @@
     <ClInclude Include="include\chap3.h" />
     <ClInclude Include="include\Line.h" />
     <ClInclude Include="include\Point.h" />
+    <ClInclude Include="include\Real.h" />
     <ClInclude Include="include\Variable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
