--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="src\ch05\src0506.cpp" />
     <ClCompile Include="src\ch05\src0507.cpp" />
     <ClCompile Include="src\ch05\src0508.cpp" />
+    <ClCompile Include="src\ch05\src0509.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
