--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClCompile Include="C++ProgramDesign3rd.cpp" />
     <ClCompile Include="ch05.cpp" />
+    <ClCompile Include="ch06.cpp" />
     <ClCompile Include="chap03.cpp" />
     <ClCompile Include="ch04.cpp">
       <DeploymentContent>false</DeploymentContent>
@@ -174,6 +175,7 @@
     <ClCompile Include="src\ch05\src0507.cpp" />
     <ClCompile Include="src\ch05\src0508.cpp" />
     <ClCompile Include="src\ch05\src0509.cpp" />
+    <ClCompile Include="src\ch06\src0601.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
@@ -197,6 +199,7 @@
     <ClInclude Include="C++ProgramDesign3rd.h" />
     <ClInclude Include="include\ch04.h" />
     <ClInclude Include="include\ch05.h" />
+    <ClInclude Include="include\ch06.h" />
     <ClInclude Include="include\chap3.h" />
     <ClInclude Include="include\Line.h" />
     <ClInclude Include="include\Point.h" />
