--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="src\ch05\src0509.cpp" />
     <ClCompile Include="src\ch06\src0601.cpp" />
     <ClCompile Include="src\ch06\src0602.cpp" />
+    <ClCompile Include="src\ch06\src0603.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
