create src0606, src0607

--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj.filters
@@ -159,6 +159,12 @@
     <ClCompile Include="src\ch06\src0605.cpp">
       <Filter>Resource Files\ch06</Filter>
     </ClCompile>
+    <ClCompile Include="src\ch06\src0606.cpp">
+      <Filter>Resource Files\ch06</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ch06\src0607.cpp">
+      <Filter>Resource Files\ch06</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\chap3.h">
