--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="src\ch06\src0605.cpp" />
     <ClCompile Include="src\ch06\src0606.cpp" />
     <ClCompile Include="src\ch06\src0607.cpp" />
+    <ClCompile Include="src\ch06\src0608.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
