--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="src\ch06\src0612.cpp" />
     <ClCompile Include="src\ch06\src0613.cpp" />
     <ClCompile Include="src\ch06\src0614.cpp" />
+    <ClCompile Include="src\ch06\src0615.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
