--- a/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
+++ b/C++ProgramDesign3rd/C++ProgramDesign3rd.vcxproj
@@ -196,6 +196,9 @@
     <ClCompile Include="src\ch06\src0618.cpp" />
     <ClCompile Include="src\ch06\src0619.cpp" />
     <ClCompile Include="src\ch06\src0620.cpp" />
+    <ClCompile Include="src\ch06\src0622.cpp" />
+    <ClCompile Include="src\ch06\src0623.cpp" />
+    <ClCompile Include="src\ch06\src0624.cpp" />
     <ClCompile Include="src\chap03\src03_11.cpp" />
     <ClCompile Include="src\chap03\src03_12.cpp" />
     <ClCompile Include="src\chap03\src03_13.cpp" />
